[package]
name = "nu_plugin_dbus"
version = "0.15.0"
edition = "2021"

description = "Nushell plugin for communicating with D-Bus"
authors = ["Devyn Cairns <devyn.cairns@gmail.com>"]
license = "MIT"
keywords = ["plugin", "dbus", "nu"]
categories = ["command-line-utilities"]
repository = "https://github.com/devyn/nu_plugin_dbus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
nu-plugin = "0.102.0"
nu-protocol = { version = "0.102.0", features = ["plugin"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-xml-rs = "0.6.0"
